--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "run:day-1": "ts-node src/day-1/dayOne.ts"
+    "run:day-1": "ts-node src/day-1/dayOne.ts",
+    "test:day-1": "jest src/day-1/__tests__"
   },
   "devDependencies": {
+    "@types/jest": "27.0.2",
     "@types/node": "16.11.6",
+    "jest": "27.3.1",
+    "ts-jest": "27.0.7",
     "ts-node": "10.4.0",
     "typescript": "4.4.4"
   }
