--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "run:day-1": "ts-node src/day-1/dayOne.ts",
+    "run:day-1": "ts-node src/day-1/dayOne.ts --execute",
     "test:day-1": "jest src/day-1/__tests__"
   },
   "devDependencies": {
