--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "run:day-4": "ts-node src/day-4/dayFour.ts --execute",
     "test:day-4": "jest src/day-4/__tests__",
     "run:day-5": "ts-node src/day-5/dayFive.ts --execute",
-    "test:day-5": "jest src/day-5/__tests__"
+    "test:day-5": "jest src/day-5/__tests__",
+    "run:day-6": "ts-node src/day-6/daySix.ts --execute",
+    "test:day-6": "jest src/day-6/__tests__"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
