--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "run:day-5": "ts-node src/day-5/dayFive.ts --execute",
     "test:day-5": "jest src/day-5/__tests__",
     "run:day-6": "ts-node src/day-6/daySix.ts --execute",
-    "test:day-6": "jest src/day-6/__tests__"
+    "test:day-6": "jest src/day-6/__tests__",
+    "run:day-7": "ts-node src/day-7/daySeven.ts --execute",
+    "test:day-7": "jest src/day-7/__tests__"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
