--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "run:day-1": "ts-node src/day-1/dayOne.ts --execute",
+    "run:day-1": "ts-node src/day-1/day-1.ts --execute",
     "test:day-1": "jest src/day-1/__tests__",
-    "run:day-2": "ts-node src/day-2/dayTwo.ts --execute",
+    "run:day-2": "ts-node src/day-2/day-2.ts --execute",
     "test:day-2": "jest src/day-2/__tests__",
-    "run:day-3": "ts-node src/day-3/dayThree.ts --execute",
+    "run:day-3": "ts-node src/day-3/day-3.ts --execute",
     "test:day-3": "jest src/day-3/__tests__",
-    "run:day-4": "ts-node src/day-4/dayFour.ts --execute",
+    "run:day-4": "ts-node src/day-4/day-4.ts --execute",
     "test:day-4": "jest src/day-4/__tests__",
-    "run:day-5": "ts-node src/day-5/dayFive.ts --execute",
+    "run:day-5": "ts-node src/day-5/day-5.ts --execute",
     "test:day-5": "jest src/day-5/__tests__",
-    "run:day-6": "ts-node src/day-6/daySix.ts --execute",
+    "run:day-6": "ts-node src/day-6/day-6.ts --execute",
     "test:day-6": "jest src/day-6/__tests__",
-    "run:day-7": "ts-node src/day-7/daySeven.ts --execute",
+    "run:day-7": "ts-node src/day-7/day-7.ts --execute",
     "test:day-7": "jest src/day-7/__tests__",
-    "run:day-8": "ts-node src/day-8/dayEight.ts --execute",
+    "run:day-8": "ts-node src/day-8/day-8.ts --execute",
     "test:day-8": "jest src/day-8/__tests__"
   },
   "devDependencies": {
